[docs] 0020 — mark Phase 1/4 progress (benchmarks, ZGC, false-sharing, FileLogProjection audit)
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>